// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
////////////////////////////////////////////////////////////////////////////////

syntax = "proto3";

package google.crypto.tink;

option java_package = "com.google.crypto.tink.proto";
option java_multiple_files = true;
option go_package = "github.com/tink-crypto/tink-go/v2/proto/x_aes_gcm_go_proto";

message XAesGcmParams {
  // Must be at least 8 bytes and at most 12 bytes.
  uint32 salt_size = 1;
}

message XAesGcmKeyFormat {
  uint32 version = 1;
  reserved 2;
  XAesGcmParams params = 3;
}

// key_type: type.googleapis.com/google.crypto.tink.XAesGcmKey
message XAesGcmKey {
  uint32 version = 1;
  XAesGcmParams params = 2;
  bytes key_value = 3;
}
